# amora-catalisa

./: .gitignore  BUILD_LINUX.md  BUILD_WINDOWS.md  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CTestConfig.cmake  LICENSE  README.md  deploy.bat  mkdocs.yml
.github/ISSUE_TEMPLATE/: relatorio-mensal.yml
.github/workflows/: build-linux.yml  docs.yml
Applications/: CMakeLists.txt
Applications/AmoraDigitalRockApp/: CMakeLists.txt  Main.cxx  qAmoraDigitalRockAppMainWindow.cxx  qAmoraDigitalRockAppMainWindow.h  qAmoraDigitalRockAppMainWindow_p.h  slicer-application-properties.cmake
Applications/AmoraDigitalRockApp/Widgets/: qAppStyle.cxx  qAppStyle.h
Modules/Scripted/AmoraDigitalRock/: AmoraDigitalRock.py  CMakeLists.txt
Modules/Scripted/AmoraDigitalRock/AmoraDigitalRockLib/: AmoraNetCDFReader.py  AmoraNpyReader.py  __init__.py  amora_file_reader.py  amora_io.py
Modules/Scripted/AmoraFiltering/: AmoraFiltering.py  CMakeLists.txt
Modules/Scripted/AmoraFiltering/Resources/Scripts/: apply_filter.py
Modules/Scripted/AmoraProcessing/: AmoraProcessing.py  CMakeLists.txt
Modules/Scripted/AmoraProcessing/Resources/Scripts/: compute_histogram.py  export_gif.py  generate_rois.py  plot_roi_vtk.py  segment_otsu.py
Modules/Scripted/AmoraSimulation/: AmoraSimulation.py  CMakeLists.txt
Modules/Scripted/AmoraSimulation/Resources/Scripts/: lbm_single_phase.py  lbm_two_phase.py
Modules/Scripted/Home/: CMakeLists.txt  Home.py
Modules/Scripted/Home/Resources/Stylesheets/: amora_alloyguard.qss  amora_dark.qss  amora_light.qss  amora_ocean.qss
Resources/VolumeRendering/: presets.xml  qSlicerVolumeRenderingModule.qrc
docs/: equipe.md  index.md  metodologia.md  projeto.md  roadmap.md
docs/relatorios/: 2025-10.md  index.md
reports/: RELATORIO_MENSAL_TEMPLATE.md
